# axum-starter

./: .gitignore  Cargo.toml  README.md  example.configuration.yaml  flake.nix
migrations/: 20211117233543_init.sql
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: add_user.rs  health_check.rs  mod.rs
tests/: add_user.rs  health_check.rs
tests/helper/: mod.rs
