[package]
name = "axum-starter"
version = "0.1.0"
authors = ["Jordan Isaacs <mail@jdisaacs.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "axum-starter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3.1", features = ["headers"] }
config = "0.11.0"
hyper = "0.14.14"
reqwest = { version = "0.11.6", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.13.0", features = ["full"] }
sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "migrate", "macros", "postgres", "uuid", "chrono" ] }
tower-http = { version = "0.1", features = ["trace"] }
once_cell = "1.8.0"

# tracing
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-bunyan-formatter = "0.2"
tracing-log = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
tower-service = "0.3.1"
tower = "0.4.10"
opentelemetry = "0.16.0"
